syntax = "proto2";
package com.caidt.proto;

import "proto_descriptor.proto";
import "proto_player.proto";
import "proto_activity.proto";

message ScMessage {
    reserved 102;

    oneof cmd {
        //        Pong pong = 1;
        LoginResponse loginResponse = 101;
        //        GetPlayerInfoResponse getPlayerInfoResponse = 102;
        AllActivityResponse GetAllActivityResponse = 103;
        ActivityResponse getActivityResponse = 104;
        ScActivity scActivity = 105;
    }

}